# quant-strat-lab

./: .gitignore  README.md
05_paris_trading_simulation/: paris_trading_strategy_simulator.ipynb
13_markov_switching_volatility_simulation/: markov_switching_volatility_analysis.ipynb
18_factor_based_investing/: README.md  setup.cfg
18_factor_based_investing/examples/: run_experiment.py
18_factor_based_investing/src/factorlab/: __init__.py  backtest.py  strategy.py
23_commodity_curve_analysis/: requirements.txt
25_cross_sectional_commodity_momentum_analysis/: commodity_prices.csv  cross_sectional_commodity_analysis.ipynb
26_momentum_and_mean_reversion_in_equity_portfolios/: README.md
27_macro_factor_sensitivity_analysis/: macro_factor_sensitivity_analysis.ipynb
28_data_lab_assignment_conceptualisation/: asset_data.csv
29_pure_vs_dirty_dispersion_trading_simulation/: README.md
30_data_lab_assignment_conceptualisation/: cross_asset_data.csv  data_lab_warmup.csv  data_lab_warmup_project.ipynb  light_quant_research_project.ipynb
application_integration/: project_overview.md
daily-trading-strategies/: 05-Jan-2026.ipynb  06-Jan-2026.ipynb  07-Jan-2026.ipynb  08-Jan-2026.ipynb  09-Jan-2026.ipynb  _05-Jan-2026.ipynb  daily-trading-strategy-template.ipynb
news_briefings/: daily_news_briefings.ipynb  (+2 more)
projects/18_factor_based_investing/: pyproject.toml
projects/18_factor_based_investing/src/factorlab/: data.py  experiment.py  factors.py  standardise.py  utils.py
projects/18_factor_based_investing/src/factorlab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
projects/18_factor_based_investing/tests/: test_factors.py  test_strategy.py
projects/19_multi_asset_volatility_modelling/: pyproject.toml  setup.cfg
projects/19_multi_asset_volatility_modelling/examples/: run_experiment.py
projects/19_multi_asset_volatility_modelling/src/vollab/: __init__.py  cleaning.py  data.py  evaluation.py  experiment.py  forecast.py  garch_base.py  gjr.py
projects/19_multi_asset_volatility_modelling/tests/: test_forecast.py
(+257 files in other folders)
