[metadata]
name = factorlab
version = 0.1.0
description = A modular factor-based investment research framework
author = Deborah Akintoye
license = MIT

[options]
package_dir =
    = src

packages = find:
include_package_data = True
python_requires = >=3.9

install_requires =
    numpy
    pandas
    matplotlib

[options.packages.find]
where = src
