[metadata]
name = vollab
version = 0.1.0
description = A modular multi-asset volatility modelling and forecasting system
author = Deborah Akintoye
license = MIT

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.9

install_requires =
    numpy
    pandas
    scipy
    matplotlib

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
